closes Fix mobile layout #14 closes Make resizing work on mobile #16 fixes bug with null blocks getting rendered.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ body {
 
 .top-graph {
     width: 100%;
-    height: 400px;
+    height: 30%;
 }
 
 #splitter {
@@ -20,5 +20,5 @@ body {
 /* Set the AG Grid container to fill the entire viewport */
 #myGrid {
     width: 100%;
-    height: calc(100% - 410px);
+    height: calc(100% - 30% - 10px);
 }
